--- a/Survey-form-p1/index.html
+++ b/Survey-form-p1/index.html
@@ -13,7 +13,7 @@
       <fieldset id="bsc-info">
         <legend>Basic Information</legend>
           <label for="name" id="name-label"> Please enter your name:
-            <input id="name" type="text" placeholder="Name" value="email" required>
+            <input id="name" type="text" placeholder="Name" required>
           </label>
           <label for="email" id="email-label" > Please enter your email:
             <input placeholder="Email" id="email" type="email" required>
